# docs

./: .travis.yml  CNAME  README.md  README.rst  index.md  mkdocs.yml  robots.txt
Introduce/: sincere.md
Language/: Eventually_Consistent.md  free-programming-books.md
Language/C/: LearnUrl.md  cmake.md
Language/Python/: LearnUrl.md
Language/Thrift/: Thrift.md
Linux/: Centos7.md  Dockerfile  README.md  hist  ulimit.md
Linux/CommandWiki/: LinuxCrontab.md  LinuxLsof.md  LinuxTaskCT.md  LinuxTcpdump.md
Mini-tool/: mini-tool.md
Service/Foreman/: foreman.md
Service/Git/: git.md
Thinking/: Jim_Carrey.md  Lee.md
aws/: AWS_Lambda.md
docs/: 01_intro.rst  01_opensource.md  02_opensource.rst  02_practice.md  03_hello.md  03_how_to_github_pull_request.md  04_chinese_copywrite_guidelines.md  AIAlgorithm.md  MachineLearningAlgorithm.md  Maintainers.md  aifm.md  career.md  cd.md  ci.md  conf.py  contributing.rst  forfun.md  index.md  index.rst  lovelytech.md  sre.md
docs/Deeplearning/: deeplearning.md
docs/Language/C/: libFile.md
docs/Language/C/cmake/helloword/src/: CMakeLists.txt  helloworld.c
docs/Language/Thrift/: a.thrift  a_client.py  a_server.py
docs/Linux/: Solution.md  pxe.md
docs/Linux/Systemd/: systemd.md
docs/MyCql/: StudyDay1.md  test.md
docs/Service/: README.md
docs/Service/lighttpd/: lighttpd.conf.2009  lighttpd.md  lighttpd_conf.md
docs/afe/: day1.md
docs/aws/: Amazon_API_Gateway.md  awscli.md
docs/jobs/: salary.md
docs/nginx/: nginx_dns_resolve.md
docs/project/: bbhj.airdb.io.md  index.md
docs/yum.repo/: repo
(+14 files in other folders)
