#http://blog.csdn.net/netnote/article/details/4051620
#ADD_SUBDIRECTORY(./)

IF(UNIX)
  SET(SRC_LIST helloworld.c greet.c)
  SET(PROJECT_SOURCE_DIR ../)
ENDIF (UNIX)

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
# 定义库生成的路径
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)

# 打印BINARY目录
MESSAGE(STATUS "==Dean==  This is BINARY dir " ${EXECUTABLE_OUTPUT_PATH})

# 定义编辑器
SET(CMAKE_C_COMPILER gcc)
#SET(CMAKE_C_FLAGS -Wall )
ADD_DEFINITIONS("-Wall -g")
#SET(LIBRARY_OUTPUT_PATH ./ )
INCLUDE_DIRECTORIES(./)

# 定义生成二进制文件名及依赖
add_executable(helloworld ${SRC_LIST})
